# simplediscord

./: .gitignore  LICENSE  README.md  bad_words.txt  pyproject.toml  requirements.txt  setup.cfg
examples/: bad_words.py  greetings.py  rock_paper_scissors.py
simplediscord/: SimpleDiscord.py  __init__.py
simplediscord/utils/: colors.py  mylogger.py
src/: SimpleDiscord.py  bot.py  gateway.py  register.py
