[metadata]
name = SimpleDiscord
version = attr: simplediscord.__version__
description = A Simple discord api wrapper.
author = MertGM
author_email = mertdalkiran@hotmail.com
url = https://github.com/MertGM/simplediscord
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    urllib3 >= 1.26.7
    websocket-client >= 1.2.1
python_requires >= 3.8
